--- a/development/frontend/src/pages/pet/css/GrowTree.css
+++ b/development/frontend/src/pages/pet/css/GrowTree.css
@@ -1,13 +1,24 @@
 @media only screen and (min-width: 821px) {
+  .growTreePage {
+    /* border: 3px solid black; */
+    margin-left: 25%;
+  }
+
   .growTreePageContainer {
     border: 3px solid black;
+    width: 821px;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
     background-image: url("/src/assets/128.png");
     background-repeat: repeat-y;
     background-position: center;
   }
 
+  .growTreeFooter {
+    padding-left: 4%;
+  }
+
   .treeContainer {
     /* border: 3px solid rgb(0, 174, 255); */
     display: flex;
@@ -16,42 +27,61 @@
     width: 100%;
     font-size: 3vmax;
   }
-  .tree-title{
+
+  .tree-title {
+    /* border: 3px solid black; */
+    margin: 1% 0 1% 0;
+    font-size: 8vmin;
     font-weight: 300;
+    display: flex;
+    justify-content: space-around;
+    width: 821px;
+    height: 100%;
+  }
+
+  .tree-title img {
+    height: 15vh;
   }
 
   .growPictureLeft {
+    /* border: 3px solid rgb(255, 114, 182); */
     display: flex;
     justify-content: flex-start;
   }
 
   .growPictureRight {
+    /* border: 3px solid rgb(255, 191, 0); */
     display: flex;
     justify-content: flex-end;
   }
 
   .leftPhoto {
-    border: 3px solid rgb(255, 114, 182);
+    /* border: 3px solid rgb(255, 114, 182); */
     margin-bottom: 10px;
-    margin-right: 7vw;
+    margin-right: 2vw;
   }
 
   .rightPhoto {
-    border: 3px solid rgb(255, 191, 0);
+    /* border: 3px solid rgb(255, 191, 0); */
     margin-bottom: 10px;
-    margin-left: 7vw;
+    margin-left: 2vw;
   }
 
-  .footer {
+  .tree-upload-grow-tree {
+    color: #f2968f;
+    font-size: 50px;
+    margin-top: 5px;
     position: fixed;
-    /* left: 20%; */
+    bottom: 10vh;
+    right: 25vw;
+    z-index: 10;
   }
 
   /* //////////////cat foot//////////// */
 
   .paw {
-    width: 30vw;
-    height: 55vh;
+    width: 25vw;
+    height: 48vh;
     position: relative;
     border-radius: 50%;
     background: #fff;
@@ -127,12 +157,12 @@
 
   .left,
   .right {
-    width: 21vw;
-    height: 31vh;
-    border-radius: 70% 70% 50% 50%/90% 90% 50% 50%;
+    width: 18vw;
+    height: 29vh;
+    border-radius: 70% 70% 70% 70%/90% 90% 60% 60%;
     position: relative;
-    bottom: -34%;
-    left: 15.5%;
+    bottom: -36%;
+    left: 14%;
     overflow: hidden;
   }
 
@@ -142,21 +172,66 @@
     align-items: center;
   }
 }
-
-
-
 
 @media only screen and (max-width: 820px) {
+  .grow-tree-body {
+    background-image: url("/src/assets/128.png");
+    background-repeat: repeat-y;
+    background-position: center;
+    background-size: 20%;
+    /* opacity: 0.5; */
+  }
+
+  .growTreeFooter {
+    padding-left: 25%;
+  }
+
+  .grow-tree-mid {
+    display: flex;
+    justify-content: center;
+  }
+
+  .tree-top-area {
+    height: 20vw;
+  }
+
+  .tree-title {
+    /* border: 3px solid black; */
+    margin-top: 1%;
+    font-size: 8vmin;
+    font-weight: 300;
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+    height: 100%;
+  }
+
+  .tree-title img {
+    height: 12vh;
+  }
+
   .growTreePageContainer {
     /* border: 3px solid black; */
     display: flex;
     justify-content: center;
-    /* background-image: url("/src/assets/128.png"); */
-    background-repeat: repeat-y;
-    background-position: center;
+    margin-top: 2%;
+    width: 95vw;
+    border-radius: 30px;
   }
-  .tree-title{
-    font-weight: 300;
+
+  .tree-upload-grow-tree {
+    color: #f2968f;
+    font-size: 50px;
+    margin-top: 5px;
+    position: fixed;
+    bottom: 10vh;
+    right: 1vw;
+    z-index: 10;
+  }
+
+  .tree-top-area {
+    display: flex;
+    justify-content: space-between;
   }
 
   .treeContainer {
@@ -171,33 +246,20 @@
   .growPictureLeft {
     display: flex;
     justify-content: flex-start;
+    margin-bottom: 15%;
   }
 
   .growPictureRight {
     display: flex;
     justify-content: flex-end;
-  }
-
-  .leftPhoto {
-    /* border: 3px solid rgb(255, 114, 182); */
-    margin-bottom: 10px;
-  }
-
-  .rightPhoto {
-    /* border: 3px solid rgb(255, 191, 0); */
-    margin-bottom: 10px;
-  }
-
-  .footer {
-    position: fixed;
-    /* left: 20%; */
+    margin-bottom: 15%;
   }
 
   /* //////////////cat foot//////////// */
 
   .paw {
-    width: 55vw;
-    height: 35vh;
+    width: 60vw;
+    height: 40vh;
     position: relative;
     border-radius: 50%;
     background: #fff;
@@ -218,7 +280,7 @@
     background: #f2968f58;
     border-radius: 50% 50% 50% 50%;
     left: 27%;
-    top: 10%;
+    top: 6%;
     transform: rotate(-15deg);
   }
 
@@ -230,7 +292,7 @@
     background: #f2968f58;
     border-radius: 50% 50% 50% 50%;
     right: 27%;
-    top: 10%;
+    top: 6%;
     transform: rotate(15deg);
   }
 
@@ -249,36 +311,36 @@
   .inner:before {
     content: "";
     display: block;
-    width: 14%;
-    height: 19%;
+    width: 13%;
+    height: 20%;
     background: #f2968f58;
     border-radius: 70% 70% 50% 50%;
     /* 60% 60% 40% 40% */
     left: 10%;
-    top: 28%;
+    top: 23%;
     transform: rotate(-50deg);
   }
 
   .inner:after {
     content: "";
     display: block;
-    width: 14%;
-    height: 19%;
+    width: 13%;
+    height: 20%;
     background: #f2968f58;
     border-radius: 70% 70% 50% 50%;
     right: 10%;
-    top: 28%;
+    top: 23%;
     transform: rotate(50deg);
   }
 
   .left,
   .right {
-    width: 38vw;
-    height: 21vh;
-    border-radius: 70% 70% 50% 50%/90% 90% 50% 50%;
+    width: 41vw;
+    height: 27vh;
+    border-radius: 70% 70% 70% 70%/75% 75% 50% 50%;
     position: relative;
-    bottom: -34%;
-    left: 15.5%;
+    bottom: -30%;
+    left: 16%;
     overflow: hidden;
   }
 
@@ -289,55 +351,62 @@
   }
 }
 
-
-
-
-
 @media only screen and (max-width: 767px) {
-  .grow-tree-body{
-    /* background-image: url("/src/assets/128.png"); */
+  .grow-tree-body {
+    background-image: url("/src/assets/128.png");
     background-repeat: repeat-y;
-    background-position:left;
-    background-size: 50%;
+    background-position: center;
+    background-size: 20%;
     /* opacity: 0.5; */
   }
-  .grow-tree-mid{
+
+  .growTreeFooter {
+    padding-left: 2.8%;
+  }
+
+  .grow-tree-mid {
     display: flex;
     justify-content: center;
   }
-  .tree-top-area{
+
+  .tree-top-area {
     height: 20vw;
-  
   }
-  .tree-title{
+
+  .tree-title {
+    /* border: 3px solid black; */
+    margin-top: 1%;
     font-size: 8vmin;
-    margin-left: 80px;
-    margin-top: 10px;
     font-weight: 300;
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+    height: 100%;
   }
 
   .growTreePageContainer {
     /* border: 3px solid black; */
     display: flex;
     justify-content: center;
-   
+    margin-top: 2%;
     width: 95vw;
-    /* background: rgba(255, 255, 255, 0.5); */
     border-radius: 30px;
   }
-.tree-upload-grow-tree{
-  color:#f2968f;
-  font-size: 50px;
-  margin-top: 5px;
-  position:fixed;
-  right:15px;
-  z-index: 10;
+  .tree-upload-grow-tree {
+    color: #f2968f;
+    font-size: 50px;
+    margin-top: 5px;
+    position: fixed;
+    bottom: 10vh;
+    right: 1vw;
+    z-index: 10;
+  }
 
-}
-.tree-top-area{
-  display: flex;
-  justify-content: space-between;
-}
+  .tree-top-area {
+    display: flex;
+    justify-content: space-between;
+  }
+
   .treeContainer {
     /* border: 3px solid rgb(0, 174, 255); */
     display: flex;
@@ -350,21 +419,21 @@
   .growPictureLeft {
     display: flex;
     justify-content: flex-start;
+    margin-bottom: 15%;
   }
 
   .growPictureRight {
     display: flex;
     justify-content: flex-end;
+    margin-bottom: 15%;
   }
 
   .leftPhoto {
     /* border: 3px solid rgb(255, 114, 182); */
-    margin-bottom: 10px;
   }
 
   .rightPhoto {
     /* border: 3px solid rgb(255, 191, 0); */
-    margin-bottom: 10px;
   }
 
   /* //////////////cat foot//////////// */
@@ -374,7 +443,7 @@
     height: 35vh;
     position: relative;
     border-radius: 50%;
-    background: #ffffffb7;
+    background: #ffffff;
     transition: all 0.5s cubic-bezier(0, 0.73, 0.73, 1.52);
   }
 
@@ -387,11 +456,11 @@
   .paw:before {
     content: "";
     display: block;
-    width: 20%;
-    height: 28%;
+    width: 16%;
+    height: 23%;
     background: #f2968f58;
     border-radius: 50% 50% 50% 50%;
-    left: 27%;
+    right: 25%;
     top: 7%;
     transform: rotate(-15deg);
   }
@@ -399,11 +468,11 @@
   .paw:after {
     content: "";
     display: block;
-    width: 20%;
-    height: 28%;
+    width: 16%;
+    height: 23%;
     background: #f2968f58;
     border-radius: 50% 50% 50% 50%;
-    right: 23%;
+    right: 25%;
     top: 7%;
     transform: rotate(15deg);
   }
@@ -423,36 +492,36 @@
   .inner:before {
     content: "";
     display: block;
-    width: 15%;
-    height: 23%;
+    width: 13%;
+    height: 19%;
     background: #f2968f58;
     border-radius: 70% 70% 50% 50%;
-    /* 60% 60% 40% 40% */
-    left: 6%;
-    top: 29%;
+    right: 8%;
+    top: 25%;
     transform: rotate(-50deg);
   }
 
   .inner:after {
     content: "";
     display: block;
-    width: 15%;
-    height: 23%;
+    width: 13%;
+    height: 19%;
     background: #f2968f58;
     border-radius: 70% 70% 50% 50%;
-    right: 6%;
-    top: 32%;
+    right: 8%;
+    top: 25%;
     transform: rotate(50deg);
   }
 
   .left,
   .right {
-    width: 48vw;
-    height: 40vw;
-    border-radius: 70% 70% 50% 50%/90% 90% 50% 50%;
+    /* border: 3px solid rgb(255, 191, 0); */
+    width: 52vw;
+    height: 50vw;
+    border-radius: 70% 70% 70% 70%/75% 75% 50% 50%;
     position: relative;
-    bottom: -34%;
-    left: 20.3%;
+    bottom: -29%;
+    left: 18.5%;
     overflow: hidden;
   }
 
