--- a/development/frontend/src/components/DefaultHeader.css
+++ b/development/frontend/src/components/DefaultHeader.css
@@ -35,12 +35,34 @@
     top: 7vh;
     /* right: 23.5vw; */
     width: 18%;
-    height: 15vh;
+    height: 25vh;
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
     z-index: 1000000;
     font-weight: 200;
+  }
+
+  .logoutCardButton {
+    margin-bottom: 10%;
+  }
+
+  .logoutCardDefault a {
+    text-decoration: none;
+    font-size: 3vmax;
+    border-bottom: 1px solid black;
+    width: 100vw;
+  }
+
+  .logOutCardContact {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .contactUs {
+    display: flex;
+    align-items: center;
+    font-size: 1.2vmax;
   }
 }
 
@@ -81,14 +103,36 @@
     position: absolute;
     top: 5vh;
     /* right: 0.6vw; */
-    width: 30vw;
-    height: 12vh;
+    width: 40vw;
+    height: 20vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     z-index: 1000000;
     font-weight: 200;
+  }
+
+  .logoutCardButton {
+    margin-bottom: 10%;
+  }
+
+  .logoutCardDefault a {
+    text-decoration: none;
+    font-size: 5vmax;
+    border-bottom: 1px solid black;
+    width: 100vw;
+  }
+
+  .logOutCardContact {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .contactUs {
+    display: flex;
+    align-items: center;
+    font-size: 2.2vmax;
   }
 }
 
@@ -132,10 +176,33 @@
     /* top: 6.6vh; */
     /* right: 1vw; */
     width: 50vw;
-    height: 10vh;
+    height: 20vh;
     display: flex;
     justify-content: center;
     z-index: 1000000;
     font-weight: 200;
+    margin-top: 2%;
+  }
+
+  .logoutCardButton {
+    margin-bottom: 10%;
+  }
+
+  .logoutCardDefault a {
+    text-decoration: none;
+    font-size: 4vmax;
+    border-bottom: 1px solid black;
+    width: 100vw;
+  }
+
+  .logOutCardContact {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .contactUs {
+    display: flex;
+    align-items: center;
+    font-size: 2vmax;
   }
 }
