--- a/development/frontend/src/pages/pet/css/UploadGrowTree.css
+++ b/development/frontend/src/pages/pet/css/UploadGrowTree.css
@@ -45,6 +45,9 @@
     width: 100%;
     margin: 2vh 0 2vh 0;
   }
+  .grow-tree-footer {
+    margin-left: 25%;
+  }
 }
 
 @media only screen and (max-width: 767px) {
@@ -93,5 +96,8 @@
     height: 100%;
     width: 100%;
     margin: 2vh 0 2vh 0;
+  }
+  .grow-tree-footer {
+    margin-left: 2.7%;
   }
 }
