Update css & Fix error

--- a/development/frontend/src/pages/pet/css/GrowTree.css
+++ b/development/frontend/src/pages/pet/css/GrowTree.css
@@ -5,7 +5,7 @@
   }
 
   .growTreePageContainer {
-    border: 3px solid black;
+    /* border: 3px solid black; */
     width: 821px;
     display: flex;
     flex-direction: column;
