--- a/development/frontend/src/pages/place/css/Map.css
+++ b/development/frontend/src/pages/place/css/Map.css
@@ -632,12 +632,14 @@
   }
 
   .previewPlaceCardPicture {
-    /* border: 3px solid rgb(245, 245, 245); */
+    /* border: 3px solid rgb(248, 116, 116); */
     display: flex;
+    width: 80%;
     height: 100%;
   }
 
   .previewPlaceCardPicture img {
+    width: 100%;
     height: 100%;
   }
 
@@ -646,6 +648,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    width: 60%;
     margin-left: 1%;
   }
 
