--- a/development/frontend/src/pages/pet/css/WeightRecord.css
+++ b/development/frontend/src/pages/pet/css/WeightRecord.css
@@ -49,6 +49,7 @@
     border: 10px solid black;
     background-color: blue;
   }
+
   .weight-container {
     background-color: #f8dbdb;
     width: 90vw;
@@ -250,4 +251,11 @@
 
 .mantine-c7kmxa {
   border-radius: 30px;
+}
+
+
+@media only screen and (min-width: 500px) {
+  .weight-container{
+    padding: 5px;
+  }
 }
