--- a/development/frontend/src/pages/pet/css/PetProfile.css
+++ b/development/frontend/src/pages/pet/css/PetProfile.css
@@ -92,7 +92,7 @@
     width: 60vw;
     height: 20vh;
   }
-  .ipad-dummy-pet-icon{
+  .ipad-dummy-pet-icon {
     font-size: 20vmin;
   }
 }
@@ -111,8 +111,8 @@
   }
 
   .pet-card {
-    height: 20vw;
-    width: 50vw;
+    height: 10vw;
+    width: 40vw;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
@@ -166,9 +166,15 @@
     font-size: 6vmin;
   }
 
+  .pet-profile-area {
+    /* border: 3px solid black; */
+    height: 425px;
+    overflow: scroll;
+  }
+
   .pet-profile {
-    margin: 15px;
-    width: 50vw;
+    margin: 10px;
+    width: 40vw;
     height: 20vh;
     box-shadow: 0px 4px 16px rgba(0, 38, 82, 0.1);
     border-radius: 40px;
