--- a/development/frontend/src/pages/pet/css/Vaccine.css
+++ b/development/frontend/src/pages/pet/css/Vaccine.css
@@ -67,7 +67,6 @@
     margin-top: 2vmin;
     background: #f2968f;
     border-radius: 30px;
-
   }
   .mantine-rqmd87 {
     border-radius: 30px;
@@ -76,11 +75,9 @@
     width: 60vw;
     height: 50vw;
   }
-
 }
 /* -----------------------------  Pad Ver. ----------------------------- */
 @media only screen and (min-width: 821px) {
-
   .vaccine-page {
     height: 100vh;
     display: flex;
@@ -102,8 +99,14 @@
     margin-top: 5%;
     border: 2px solid #f0dcda;
     border-radius: 20px;
-    width: 30vw;
-    height: 30vw;
+    width: 20vw;
+    height: 35vh;
+    overflow: hidden;
+  }
+
+  .vaccine img {
+    width: 100%;
+    height: 100%;
   }
 
   .add-vaccine-button {
