--- a/development/frontend/src/pages/pet/css/WeightRecord.css
+++ b/development/frontend/src/pages/pet/css/WeightRecord.css
@@ -139,14 +139,21 @@
   }
 
   .weight-body {
-    margin: 8vmin;
+    /* border: 3px solid black; */
+    width: 821px;
+    height: 600px;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    overflow: scroll;
   }
 
   .weight-profile {
+    /* border: 3px solid black; */
     display: flex;
     justify-content: center;
-    flex-direction: row;
+    width: 100%;
   }
   .weight-pet-introduction {
     display: flex;
@@ -155,7 +162,7 @@
     margin-left: 15%;
   }
   .weight-pet-name {
-    font-size: 10vmin;
+    font-size: 6vmin;
     font-weight: 230;
   }
 
@@ -163,7 +170,11 @@
     background-color: #e0cdff;
     border-radius: 30px;
     font-size: 15px;
-    height: 20px;
+    height: 30px;
+    width: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     padding: 6px 14px 7px;
     color: #7c699b;
     margin: 10px;
@@ -176,11 +187,12 @@
     background-color: blue;
   }
   .weight-container {
+    /* border: 3px solid black; */
     background-color: #f8dbdb;
     border-radius: 15px;
     margin-top: 5vmin;
     padding: 6vmin 0;
-    width: 60vw;
+    width: 50vw;
   }
   .weight-container-titte {
     font-size: 6vmin;
@@ -254,9 +266,8 @@
   border-radius: 30px;
 }
 
-
 @media only screen and (min-width: 500px) {
-  .weight-container{
+  .weight-container {
     padding: 5px;
   }
 }
